2001-04-11  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Don't check malloc.h.

	* output-er.c: Don't include malloc.h.

	* output-p2e.c: Likewise.

2001-04-11  Masatake YAMATO  <yamato@redhat.com>

	* output-er.c: Include malloc.h if HAVE_MALLOC_H is
	defined.

	* output-p2e.c: Likewise.

	* configure.in: Check malloc.h.
	These changes are suggested by 
	Peter Cucka<pcucka@anim.dreamworks.com>.

2001-03-25  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: VERSION 0.27a.

2001-03-24  Masatake YAMATO  <yamato@redhat.com>
	
	* Makefile.am (autotrace_LDADD): Added -lm.
	Suggested by "Stefan A. Deutscher" <sad@utk.edu>.
	(autotrace-config.in): Specify the base file at its 
	generating rule.
	Reported by "Stefan A. Deutscher" <sad@utk.edu>.

2001-03-21  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.27.

	* output-fig.c (get_fig_colour): Added static keyword.
	(fig_col_init): Likewise.

	* output-emf.c: Added static keyword to all variable
	and functions except output_emf_writer.

	* input-bmp.[ch] (bmp_load_image): Renamed ReadBMP.

	* input-tga.[ch] (tga_load_image): Renamed ReadTGA.

2001-03-21  Martin Weber <martweb@gmx.net>

	Message-ID: <3AB7AD7B.CA58CE8A@gmx.net>.
	* README: Updated.
	
2001-03-16  Peter Cucka <pcucka@anim.dreamworks.com>

	Message-ID: <3AB26304.182F7AB2@anim.dreamworks.com>:
	* fit.c: Fixed a bug that, in centerline mode, caused a zero-length
	line segment to be added to the end of every open curve.

	* output-er.c: Modified out_splines() to correctly output open
 	curves, taking into account the above changes to fit.c.

2001-03-20  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Check ImageMagick version is higher 
	than 5.2.1. Use AC_MSG_WARN instead of AC_MSG_ERROR
	if ImageMagick is not found. The user can build 
	autotrace without ImageMagick.
	This change is required by Martin.
	Message-ID: <3AB26698.DFC2341D@gmx.net>.

2001-03-15  Martin Weber <martweb@gmx.net>
